# ca-utils

./: .gitignore  README.md  pyproject.toml
cautils/: .env  bq_metadata.py  da_lro.py  data_agent.py  exampleQueries_schema.json  google_request_helper.py  helpers.py  llm.py  llm_adk.py  llm_adk_backup.py  llm_adk_descriptions.py  llm_adk_fks.py  main.py  metadata_tool.py  schemaRelationships.yaml.sample  schemaRelationships_schema.json  test_schema_relationships.py
cautils/init_files/: README.md  agentMetadata.yaml  autogen.yaml  datasourceReferences.yaml  exampleQueries.yaml  glossaryTerms.yaml  schemaRelationships.yaml  systemInstruction.yaml
